gitops/applications/ingress.yaml
# Grafana Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - grafana.one.codcn.com
    secretName: grafana-tls
  rules:
  - host: grafana.one.codcn.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lgtm-stack-grafana
            port:
              number: 80
---
# Argo CD Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitops-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - gitops.one.codcn.com
    secretName: gitops-tls
  rules:
  - host: gitops.one.codcn.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
